Remove depreciated URL constructor for Java 20+, use URI instead